# datascript

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
ds/: CMakeLists.txt  compiler.cc  compiler.hh  compiler_options.cc  compiler_options.hh  logger.cc  logger.hh  main.cc
lib/: CMakeLists.txt
lib/include/datascript/: ast.hh  base_renderer.hh  codegen.hh  codegen_commands.hh  command_builder.hh  ir.hh  ir_builder.hh  parser.hh  parser_error.hh  renderer_plugin.hh  renderer_registry.hh  semantic.hh
lib/include/datascript/codegen/: code_writer.hh  option_description.hh
lib/include/datascript/codegen/cpp/: cpp_code_writer.hh  cpp_expression_renderer.hh  cpp_helper_generator.hh  cpp_library_mode.hh  cpp_renderer.hh  cpp_string_utils.hh  cpp_writer_context.hh
lib/include/datascript/codegen/datascript/: datascript_renderer.hh
lib/include/datascript/ksy/: ksy_to_ir_builder.hh
lib/src/codegen/: base_renderer.cc  code_writer.cc  command_builder.cc  renderer_registry.cc
lib/src/codegen/cpp/: cpp_code_writer.cc  cpp_expression_renderer.cc  cpp_helper_generator.cc  cpp_library_mode.cc  cpp_renderer.cc  cpp_renderer_plugin.cc  cpp_writer_context.cc
lib/src/codegen/datascript/: datascript_renderer.cc
lib/src/ir/: ir_builder.cc
lib/src/ksy/: ksy_to_ir_builder.cc
lib/src/parser/: ast_builder.cc  ast_builder.h  ast_holder.hh  datascript_parser.y  datascript_scanner.re  module_loader.cc  parser.cc  parser_constants.h  parser_context.cc  parser_context.h  scanner_context.h
lib/src/semantic/: analyze.cc  diagnostics.cc  phase0_desugar.cc  phase1_symbols.cc  phase2_name_resolution.cc  phase3_type_checking.cc  phase4_constant_evaluation.cc  phase5_size_calculation.cc  phase6_constraint_validation.cc  phase7_reachability.cc  symbol_table.cc
test/: CMakeLists.txt  README.md  main.cc
test/bugreport/: test_bugreport_fixes.cc
test/codegen/: test_choice_default_case_bug.cc  test_choice_discriminator_e2e.cc  test_command_builder.cc  test_command_builder_exception_safety.cc  test_cpp_expr_renderer.cc  test_cpp_renderer.cc  test_cpp_renderer_validation.cc  test_datascript_renderer.cc  test_generated_bit_manipulation.cc  test_inline_discrim_default_bug.cc  test_inline_discriminator_peek.cc  test_integration.cc  test_library_mode_conditionals.cc  test_library_mode_endianness.cc  test_library_mode_strings.cc  test_library_mode_subtypes.cc  test_range_discriminator.cc  test_renderer_registry.cc  test_user_functions.cc
test/codegen/e2e/: test_e2e_bitfields.cc  test_e2e_labels_complex.cc  test_e2e_parameterized.cc  test_e2e_subtypes.cc
test/codegen/schemas/: e2e_choices.ds  e2e_conditionals.ds  e2e_exe_format.ds  e2e_labels_alignment.ds  e2e_labels_complex.ds  inline_discrim_bug.ds  library_mode_bitfields.ds  library_mode_conditionals.ds  library_mode_labels_alignment.ds  library_mode_strings.ds  library_mode_subtypes.ds  network_packet.ds  range_discriminator_test.ds
test/ir/: test_codegen_basic.cc  test_codegen_bitfields.cc  test_codegen_comprehensive.cc  test_codegen_conditionals.cc  test_codegen_constant_folding.cc  test_codegen_constraints.cc  test_codegen_parameterized.cc  test_codegen_ranged_arrays.cc  test_codegen_unions.cc  test_size_calculation.cc
test/parser/: test_module_loading.cc
test/parser/ast/: test_array_indexing.cc  test_choices.cc  test_constraints.cc  test_docstring_edges.cc  test_docstrings.cc  test_endianness_directives.cc  test_enums.cc  test_field_access.cc  test_function_calls.cc  test_functions.cc  test_parser_basic.cc  test_structs.cc  test_subtypes.cc  test_unions.cc
test/semantic/: test_reachability.cc  test_subtypes.cc  test_type_checking.cc
test/testdata/modules/test/: foo.ds  main.ds  wildcard.ds
unittest/: CMakeLists.txt
unittest/codegen/: test_choice_default_case_bug.cc  test_choice_discriminator_e2e.cc  test_code_writer.cc  test_complex_expressions.cc  test_cpp_renderer.cc  test_cpp_writer_context.cc  test_generated_network_packet.cc  test_generated_simple_types.cc  test_inline_discrim_default_bug.cc  test_integration.cc  test_labels_alignment.cc  test_library_mode_bitfields.cc  test_library_mode_choices.cc  test_library_mode_conditionals.cc  test_library_mode_e2e.cc  test_library_mode_endianness.cc  test_library_mode_inline_discrim.cc  test_library_mode_labels_alignment.cc  test_library_mode_parameterized.cc  test_library_mode_strings.cc  test_library_mode_subtypes.cc
unittest/codegen/e2e/: test_e2e_arrays.cc  test_e2e_choices.cc  test_e2e_conditionals.cc  test_e2e_endianness.cc  test_e2e_enums.cc  test_e2e_exe_format.cc  test_e2e_expressions.cc  test_e2e_function_calls.cc  test_e2e_labels_alignment.cc  test_e2e_parameterized.cc  test_e2e_primitives.cc  test_e2e_real_world.cc  test_e2e_strings.cc
unittest/codegen/schemas/: bit_manipulation.ds  e2e_arrays.ds  e2e_bitfields.ds  e2e_endianness.ds  e2e_enums.ds  e2e_exe_format.ds  e2e_expressions.ds  e2e_function_calls.ds  e2e_parameterized.ds  e2e_primitives.ds  e2e_real_world.ds  e2e_strings.ds  e2e_subtypes.ds  inline_discrim_default_bug.ds  library_mode_choices.ds  library_mode_endianness.ds  library_mode_inline_discrim.ds  library_mode_parameterized.ds  library_mode_test.ds  simple_types.ds
unittest/ir/: test_codegen_arrays.cc  test_codegen_bitfields.cc  test_codegen_choices.cc  test_codegen_conditionals.cc  test_codegen_constant_folding.cc  test_codegen_enums.cc  test_codegen_ranged_arrays.cc  test_codegen_subtypes.cc  test_codegen_unions.cc  test_codegen_variable_arrays.cc
unittest/parser/: test_module_loading.cc
unittest/parser/ast/: test_array_indexing.cc  test_arrays.cc  test_bit_fields.cc  test_choices.cc  test_expressions.cc  test_field_access.cc  test_function_calls.cc  test_identifiers_qualified_names.cc  test_integer_literals.cc  test_package_import.cc  test_parser_basic.cc
unittest/semantic/: test_constant_evaluation.cc  test_constraint_validation.cc  test_keyword_validation.cc  test_name_resolution.cc  test_parameter_validation.cc  test_size_calculation.cc  test_symbol_collection.cc
unittest/testdata/modules/test/: bar.ds  baz.ds
(+12 files in other folders)
